Re-apply `z-index` on close icon to make sure it floats on top of bar.

--- a/assets/scss/bar.scss
+++ b/assets/scss/bar.scss
@@ -189,6 +189,7 @@ $mobile_max: 580px;
 	margin-right: 12px;
 	cursor: pointer;
 	clear: both;
+	z-index: 10;
 }
 
 .mctb-icon-inside-bar {
